--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -1165,13 +1165,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "        UTILIZATION TYPE STATE          NDC PRODUCT NAME  UNITS REIMBURSED  \\\n0                   MCOU    PA  55150023930   Dexamethas             33.00   \n1                   FFSU    PA    456060010   TEFLARO 60            224.00   \n2                   MCOU    PA    115692201   DIVALPROEX           1626.00   \n3                   FFSU    PA     54455025    METHOTREX            450.00   \n4                   MCOU    PA  50458014090     INVOKANA           3850.00   \n...                  ...   ...          ...          ...               ...   \n1526189             MCOU    NJ  63323031466   Vancomycin             19.53   \n1526190             MCOU    NJ  51991074810   Duloxetine           3048.00   \n1526191             MCOU    NJ    406051201    OXYCODONE         161572.00   \n1526192             MCOU    NJ    115681108    BUPROPION           5098.00   \n1526193             MCOU    NJ  50242004164   CATHFLO AC            182.50   \n\n         NUMBER OF PRESCRIPTIONS  TOTAL AMOUNT REIMBURSED  \\\n0                           19.0                   234.98   \n1                           36.0                 35752.31   \n2                           20.0                  2318.55   \n3                           22.0                   565.29   \n4                          111.0                 52655.13   \n...                          ...                      ...   \n1526189                     14.0                   822.99   \n1526190                     93.0                  4270.15   \n1526191                   3926.0                 34981.10   \n1526192                    160.0                  3810.15   \n1526193                    155.0                 16620.63   \n\n         MEDICAID AMOUNT REIMBURSED  NON MEDICAID AMOUNT REIMBURSED  \\\n0                            234.98                            0.00   \n1                          35752.31                            0.00   \n2                           2287.80                           30.75   \n3                            516.23                           49.06   \n4                          50641.22                         2013.91   \n...                             ...                             ...   \n1526189                      822.99                            0.00   \n1526190                     4270.15                            0.00   \n1526191                    34791.07                          190.03   \n1526192                     3810.15                            0.00   \n1526193                    15103.73                         1516.90   \n\n                   LOCATION  TOTAL MEDICAID ENROLLEES  \n0        (40.5773, -77.264)                   2569232  \n1        (40.5773, -77.264)                   2569232  \n2        (40.5773, -77.264)                   2569232  \n3        (40.5773, -77.264)                   2569232  \n4        (40.5773, -77.264)                   2569232  \n...                     ...                       ...  \n1526189  (40.314, -74.5089)                   1705594  \n1526190  (40.314, -74.5089)                   1705594  \n1526191  (40.314, -74.5089)                   1705594  \n1526192  (40.314, -74.5089)                   1705594  \n1526193  (40.314, -74.5089)                   1705594  \n\n[1526194 rows x 11 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>UTILIZATION TYPE</th>\n      <th>STATE</th>\n      <th>NDC</th>\n      <th>PRODUCT NAME</th>\n      <th>UNITS REIMBURSED</th>\n      <th>NUMBER OF PRESCRIPTIONS</th>\n      <th>TOTAL AMOUNT REIMBURSED</th>\n      <th>MEDICAID AMOUNT REIMBURSED</th>\n      <th>NON MEDICAID AMOUNT REIMBURSED</th>\n      <th>LOCATION</th>\n      <th>TOTAL MEDICAID ENROLLEES</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>MCOU</td>\n      <td>PA</td>\n      <td>55150023930</td>\n      <td>Dexamethas</td>\n      <td>33.00</td>\n      <td>19.0</td>\n      <td>234.98</td>\n      <td>234.98</td>\n      <td>0.00</td>\n      <td>(40.5773, -77.264)</td>\n      <td>2569232</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>FFSU</td>\n      <td>PA</td>\n      <td>456060010</td>\n      <td>TEFLARO 60</td>\n      <td>224.00</td>\n      <td>36.0</td>\n      <td>35752.31</td>\n      <td>35752.31</td>\n      <td>0.00</td>\n      <td>(40.5773, -77.264)</td>\n      <td>2569232</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>MCOU</td>\n      <td>PA</td>\n      <td>115692201</td>\n      <td>DIVALPROEX</td>\n      <td>1626.00</td>\n      <td>20.0</td>\n      <td>2318.55</td>\n      <td>2287.80</td>\n      <td>30.75</td>\n      <td>(40.5773, -77.264)</td>\n      <td>2569232</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>FFSU</td>\n      <td>PA</td>\n      <td>54455025</td>\n      <td>METHOTREX</td>\n      <td>450.00</td>\n      <td>22.0</td>\n      <td>565.29</td>\n      <td>516.23</td>\n      <td>49.06</td>\n      <td>(40.5773, -77.264)</td>\n      <td>2569232</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>MCOU</td>\n      <td>PA</td>\n      <td>50458014090</td>\n      <td>INVOKANA</td>\n      <td>3850.00</td>\n      <td>111.0</td>\n      <td>52655.13</td>\n      <td>50641.22</td>\n      <td>2013.91</td>\n      <td>(40.5773, -77.264)</td>\n      <td>2569232</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1526189</th>\n      <td>MCOU</td>\n      <td>NJ</td>\n      <td>63323031466</td>\n      <td>Vancomycin</td>\n      <td>19.53</td>\n      <td>14.0</td>\n      <td>822.99</td>\n      <td>822.99</td>\n      <td>0.00</td>\n      <td>(40.314, -74.5089)</td>\n      <td>1705594</td>\n    </tr>\n    <tr>\n      <th>1526190</th>\n      <td>MCOU</td>\n      <td>NJ</td>\n      <td>51991074810</td>\n      <td>Duloxetine</td>\n      <td>3048.00</td>\n      <td>93.0</td>\n      <td>4270.15</td>\n      <td>4270.15</td>\n      <td>0.00</td>\n      <td>(40.314, -74.5089)</td>\n      <td>1705594</td>\n    </tr>\n    <tr>\n      <th>1526191</th>\n      <td>MCOU</td>\n      <td>NJ</td>\n      <td>406051201</td>\n      <td>OXYCODONE</td>\n      <td>161572.00</td>\n      <td>3926.0</td>\n      <td>34981.10</td>\n      <td>34791.07</td>\n      <td>190.03</td>\n      <td>(40.314, -74.5089)</td>\n      <td>1705594</td>\n    </tr>\n    <tr>\n      <th>1526192</th>\n      <td>MCOU</td>\n      <td>NJ</td>\n      <td>115681108</td>\n      <td>BUPROPION</td>\n      <td>5098.00</td>\n      <td>160.0</td>\n      <td>3810.15</td>\n      <td>3810.15</td>\n      <td>0.00</td>\n      <td>(40.314, -74.5089)</td>\n      <td>1705594</td>\n    </tr>\n    <tr>\n      <th>1526193</th>\n      <td>MCOU</td>\n      <td>NJ</td>\n      <td>50242004164</td>\n      <td>CATHFLO AC</td>\n      <td>182.50</td>\n      <td>155.0</td>\n      <td>16620.63</td>\n      <td>15103.73</td>\n      <td>1516.90</td>\n      <td>(40.314, -74.5089)</td>\n      <td>1705594</td>\n    </tr>\n  </tbody>\n</table>\n<p>1526194 rows × 11 columns</p>\n</div>"
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## WRITE YOUR CODE HERE \n"
+    "## WRITE YOUR CODE HERE \n",
+    "\n",
+    "medicaid_data_w_enrollments = medicaid_data.merge(medicaid_enrollment_cleaned_with_zip, how='inner', left_on='STATE', right_on='ABBREVIATION')\n",
+    "medicaid_data_w_enrollments = medicaid_data_w_enrollments.drop(['ABBREVIATION'], axis = 1)\n",
+    "medicaid_data_w_enrollments"
    ]
   },
   {
@@ -1183,14 +1197,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "## WRITE YOUR CODE HERE \n",
-    "\n"
+    "## WRITE YOUR CODE HERE \n"
    ]
   },
   {
